<resources>
    <string name="app_name">MediCare</string>
    <string name="title_activity_login">Sign in</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="username">E-mail</string>
    <string name="mobile">Mobile No.</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="password">Password</string>
    <string name="not_registered">Not Registered ? </string>
    <string name="register"> REGISTER </string>
    <string name="login">"LOGIN"</string>
    <string name="already_login">Already Registered ?</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="medicine_color">Medicine Colour</string>
    <string name="medicine">Medicines</string>


    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_name_hint">Name</string>
    <string name="login_mobile_number_hint">Mobile Number</string>
</resources>
