<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:drawableLeft="@drawable/username"
        android:text="@string/username"
        tools:layout_editor_absoluteX="206dp"
        tools:layout_editor_absoluteY="238dp" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:drawableLeft="@drawable/password"
        android:text="@string/password"
        tools:layout_editor_absoluteX="202dp"
        tools:layout_editor_absoluteY="387dp" />

    <EditText
        android:id="@+id/edittext_cnf_password"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:drawableLeft="@drawable/password"
        android:text="@string/cnf_password"
        tools:layout_editor_absoluteX="202dp"
        tools:layout_editor_absoluteY="387dp" />


    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        tools:layout_editor_absoluteX="187dp"
        tools:layout_editor_absoluteY="524dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/already_login" />

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:padding="5dp"
            android:textColor="#2191F1"
            android:text="@string/login" />


    </LinearLayout>

</LinearLayout>